Push all changes.
* Fixed crash that happened when opening some motion files.
* Added partial TXD support to TXP converter.
* Improved texture replacing.
* Fixed problem where UVs would look incorrect when importing a custom model.
* Fixed normalization of tangents when importing a custom model.
* Added DT and AC stage database support to Database Converter.
* Updated all programs to target .NET Framework 4.7.2
* Implemented saving of compressed FARC archives.
* Fixed saving of motion database.
* Fixed motion targeting.
* Renamed a few of sprite properties.
* Fixed saving of string array.

--- a/CliTools/FarcPack/Properties/Resources.resx
+++ b/CliTools/FarcPack/Properties/Resources.resx
@@ -126,8 +126,19 @@ This tool allows you to unpack and pack FARC files.
 ~~~~~
 Usage
 ~~~~~
-FarcPack [source] [destination]
+FarcPack [options] [source] [destination]
 
-Destination is optional, which makes it possible to do drag and drop onto the executable.</value>
+~~~~~~
+Options
+~~~~~~~
+-c or --compress: Compress archive (disabled by default)
+-a or --alignment: Alignment value (16 by default)
+
+~~~~~~~
+Example
+~~~~~~~
+FarcPack -c -a 16 mikitm mikitm.farc
+
+Destination is optional, which makes it possible to do a drag and drop onto the executable.</value>
   </data>
 </root>
