Add support for CPK files from MM+.

--- a/CliTools/FarcPack/Properties/Resources.resx
+++ b/CliTools/FarcPack/Properties/Resources.resx
@@ -121,7 +121,7 @@
     <value>~~~~~~~~~
 FARC Pack
 ~~~~~~~~~
-This tool allows you to unpack and pack FARC files.
+This tool allows you to unpack and pack FARC files. You can also unpack CPK files from MM+.
 
 ~~~~~
 Usage
